[gd_scene load_steps=19 format=2]

[ext_resource path="res://game/gameManager.gd" type="Script" id=1]
[ext_resource path="res://game/Minimap.gd" type="Script" id=2]
[ext_resource path="res://game/speedometer.tscn" type="PackedScene" id=3]
[ext_resource path="res://themes/FlatUI/kenneyUI-blue.tres" type="Theme" id=4]
[ext_resource path="res://assets/textures/speed_line.png" type="Texture" id=5]

[sub_resource type="CanvasItemMaterial" id=13]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=14]
offsets = PoolRealArray( 0.118012, 1 )

[sub_resource type="GradientTexture" id=15]
gradient = SubResource( 14 )

[sub_resource type="Curve" id=16]
_data = [ Vector2( 0, 0.768182 ), 0.0, -0.245989, 0, 0, Vector2( 1, 1 ), -0.0557575, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=17]
curve = SubResource( 16 )

[sub_resource type="ParticlesMaterial" id=18]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
scale_curve = SubResource( 17 )
color_ramp = SubResource( 15 )
anim_speed = 3.0
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="DynamicFontData" id=1]
antialiased = false
font_path = "res://themes/FlatUI/kenvector_future.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
outline_color = Color( 0.960784, 0.960784, 0.960784, 1 )
extra_spacing_top = -5
extra_spacing_bottom = -5
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=8]
antialiased = false
font_path = "res://themes/FlatUI/kenvector_future.ttf"

[sub_resource type="DynamicFont" id=9]
font_data = SubResource( 8 )

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.207843, 0.207843, 0.215686, 0.27451 )
border_blend = true
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0, 0.2, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 0.984314, 0.541176, 0, 1, 0.968627, 1, 0, 1 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[node name="gameManager" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.504
anchor_top = 0.5
anchor_right = 0.504
anchor_bottom = 0.5
margin_left = -514.096
margin_top = -300.0
margin_right = 513.904
margin_bottom = 303.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed_particles" type="Particles2D" parent="CenterContainer"]
material = SubResource( 13 )
position = Vector2( 499, 307 )
scale = Vector2( 1.2, 1.2 )
emitting = false
amount = 2
speed_scale = 2.76
process_material = SubResource( 18 )
texture = ExtResource( 5 )

[node name="timer" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -34.0
margin_right = 100.0
margin_bottom = -15.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="place" type="Label" parent="."]
margin_left = 15.0
margin_top = 15.0
margin_right = 115.0
margin_bottom = 45.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "0."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lap" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -235.0
margin_top = 15.0
margin_right = -35.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 2 )
text = "1"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minimap" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerList" type="ItemList" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = 15.0
margin_right = 100.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 9 )
custom_styles/bg = SubResource( 7 )
auto_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speedometer" parent="." instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_top = 1.0
margin_left = -164.0
margin_top = -144.0
margin_right = -65.0
margin_bottom = -58.0
rect_scale = Vector2( 1.5, 1.5 )

[node name="ReturnLobby" type="Button" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -213.324
margin_top = -57.251
margin_right = -14.9999
margin_bottom = -15.0
theme = ExtResource( 4 )
text = "Return to Lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoostBar" type="TextureProgress" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -35.0
margin_right = 100.0
margin_bottom = -15.0
step = 0.01
value = 100.0
texture_progress = SubResource( 11 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="BoostBar"]
show_behind_parent = true
margin_left = -3.0
margin_top = -3.0
margin_right = 203.0
margin_bottom = 23.0
color = Color( 0, 0, 0, 0.352941 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ReturnLobby" to="." method="_on_Return_to_Lobby_pressed"]
